add feed back slide

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -64,6 +64,14 @@ FOOD SECTION
 }
 
 /* ============================================================
+FEEDBACK
+============================================================ */
+
+.feedback-slide{
+    /* height: 600px; */
+}
+
+/* ============================================================
 FOOTER
 ============================================================ */
 .footer {
